<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="182dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="367dp"
            android:layout_height="130dp"
            android:layout_marginLeft="22dp"
            android:layout_marginBottom="-20dp"
            app:srcCompat="@drawable/logo" />

        <View
            android:layout_width="167dp"
            android:layout_height="4dp"
            android:layout_marginLeft="118dp"
            android:background="#FFFFFF" />

        <SearchView
            android:layout_width="370dp"
            android:layout_height="29dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_btn"
            android:queryHint="@string/search_view_txt" />


    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="396dp"

        android:layout_height="357dp"
        android:layout_marginRight="10dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="-15dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:background="@drawable/propertybtn"
                android:text="@string/property_btn" />

            <Button
                android:layout_width="208dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:background="@drawable/car_btn"
                android:text="@string/vehicle_btn" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-15dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:background="@drawable/motorcycle_btn"
                android:text="@string/Motorbike_btn" />

            <Button
                android:layout_width="169dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:background="@drawable/mobiles_btn"
                android:text="@string/Mobile_btn" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginBottom="-15dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:background="@drawable/electronics_btn"
                android:text="@string/Electronics_btn" />

            <Button
                android:layout_width="208dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:background="@drawable/book_btn"
                android:text="@string/Book_btn" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-15dp">

            <Button
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:background="@drawable/services_btn"
                android:text="@string/Services_btn" />

            <Button
                android:layout_width="208dp"
                android:layout_height="100dp"
                android:layout_column="2"
                android:background="@drawable/others_btn"
                android:text="@string/Other_btn" />


        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="114dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/bottom_selection_btn"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/Home_bottombar_msg"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="6dp"
            android:baselineAligned="false">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_btn2"
                android:text="@string/buy_btn" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/rounded_btn2"
                android:text="@string/rent_btn" />
        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>